--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^2.12.7",
-    "react-dom": "^19.0.0",
+    "@google/genai": "^1.2.0",
     "react": "^19.0.0",
-    "@google/genai": "^1.2.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
