--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@google/genai": "^1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
